[fix] Added ellipsis overflow to the account list

--- a/client/app/styles/index.styl
+++ b/client/app/styles/index.styl
@@ -208,6 +208,8 @@ aside
                     color            $grey-08
                     font-weight      bold
                     text-overflow    ellipsis
+                    white-space      nowrap
+                    overflow         hidden
                     &.selected
                         background-color $grey-01
                         a
